@@ -1,3 +1,10 @@
+2004-08-03  WATANABE Katsuyuki <knabe@sannet.ne.jp>
+
+	* [w3m-dev 04095] build fix when configure with --enable-messagel10n
+	* main.c (main): locale and textdomain initialization if ENABLE_NLS
+	* menu.c (initMenu): use _() instead of gettext()
+	* rc.c (show_params): use _() instead of gettext()
+
 2004-07-18  WATANABE Katsuyuki <knabe@sannet.ne.jp>
 
 	* [w3m-dev 04094] Re: option panel: gettextize select list
@@ -8533,4 +8540,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.932 2004/07/17 15:28:58 ukai Exp $
+$Id: ChangeLog,v 1.933 2004/08/02 15:40:50 ukai Exp $
